# ENPM690_final

./: .gitignore  Dockerfile  README.md
src/DQN_pursuer/: package.xml  setup.cfg  setup.py
src/DQN_pursuer/DQN_pursuer/common/: graph.py  settings.py  storagemanager.py
src/DQN_pursuer/DQN_pursuer/pursuer_agent/: ddpg.py  drl_agent.py  off_policy_agent.py  sac.py
src/DQN_pursuer/DQN_pursuer/pursuer_environment/: drl_environment.py  drl_environment_real.py
src/DQN_pursuer/DQN_pursuer/pursuer_gazebo/: drl_gazebo.py
src/DQN_pursuer/model/examples/: __dqn_training_comparison.txt
src/DQN_pursuer/model/examples/dqn_0_stage_4/: _model_configuration_20240508-023926.txt  _train_stage4_20240508-023926.txt  actor_stage4_episode1.pt  actor_stage4_episode100.pt  actor_stage4_episode1000.pt  actor_stage4_episode1100.pt  actor_stage4_episode1200.pt  actor_stage4_episode1300.pt  actor_stage4_episode1400.pt  actor_stage4_episode1500.pt  actor_stage4_episode1600.pt  actor_stage4_episode1700.pt  actor_stage4_episode1800.pt  actor_stage4_episode1900.pt  actor_stage4_episode200.pt  actor_stage4_episode2000.pt  actor_stage4_episode2100.pt  actor_stage4_episode2200.pt  actor_stage4_episode2300.pt  actor_stage4_episode2400.pt  actor_stage4_episode2500.pt  actor_stage4_episode2600.pt  actor_stage4_episode2700.pt  actor_stage4_episode2800.pt  actor_stage4_episode2900.pt  actor_stage4_episode300.pt  actor_stage4_episode3000.pt  actor_stage4_episode3100.pt  actor_stage4_episode3200.pt  actor_stage4_episode3300.pt  actor_stage4_episode3400.pt  actor_stage4_episode3500.pt  stage4_agent.pkl  (+79 more)
(+179 files in other folders)
