<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>DQN_pursuer</name>
  <version>2.0.0</version>
  <description>
    ROS 2 package for DQN_pursuer.
  </description>
  <author email="rrnitish@gmail.com">Nitish</author>
  <author email="sudanh2@umd.edu">Hariharasudan</author>
  <maintainer email="rrnitish@gmail.com">Nitish</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
